kubernetes/apps/storage/minio/tenant/app/ingress.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
  annotations:
    kustomize.toolkit.fluxcd.io/substitute: "true"
spec:
  hostnames: ["minio.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: minio
          port: 9001
      matches:
        - path:
            type: PathPrefix
            value: /
